8byte時メモリエディタのコピー箇所がおかしい
コード最後の行が4BYTEモード以外だと再読込時あどれすが2重に読まれる

this is modded mkultrav10.
KnownProblem;
certain game,kenybord PSP freeze(BUSOSINKI etc)
doesnot work fine unknown value search
if code is reloaded & saved many times,save&reload function doesnot work
certain float,doesnot display (0.01,0.001)
as for 8byte RAMeditor,strange copy position
canot save newcode when none cheat

2010/12/29
HENの場合は最初の１回だけメニューのボタンをおした際コードをよむようにした。

2010/12/28
OPENIDEA,PROMETEUSのときHBIDになるため
リロードで再取得するように変更

2010/12/24
コードがないときはダミーチートを作成して再読込させるように変更
fnc.txtを番号で分けるようにした,RAM使用に変更
HB/POPSでのID取得判定を厳格化?
decoder一部修正(lvq,svq)
R+SHIFT(SELECTボタン)で半角入力追加,L+SHIFTで小文字
キーボード出したままHOMEを押すとキーボードメニューがのこるのを修正
半角平仮名に変更
コピーアドレスにも色をつける様にした

2010/12/15
表示アドレスを0xA000000以内に拡大
メモリエディタで8/16切り替えたときはみ出していたので修正
負のMFLOATがはみでることがあったので修正
PRXメニューに□押しで電源OFF追加
DECODERのオフセットアドレス表示対応

2010/12/14
IJIROHBIDを0x140以外も対応

2010/12/10
サーチ範囲で開始アドレスが終了アドレスを超えないよう修正
ブラウザでもコピー場所に色をつけるようにした
ディスアセンブラ,PRXメニューからチートを足しても元の場所に戻れるようにした

2010/12/8
コードがないとき左端タブを選択できないよう変更
カラーファイルで設定項目追加
保存したとき同じとこを使っているのでサーチを初期化するよう変更
//PSPFAT
0x8838DBF0 ;savecode_address
0x8838DBF0 ;searchtemp_address
0x0000E400 ;searchresult_Max
//PSPSLIM
0x8A000000 ;savecode_address
0x8A000000 ;searchtemp_address
0x00040000 ;searchresult_Max 32MiB/8=最大0x00400000,約419万件?

2010/12/7
0x8838DBF0に変更してみる
カラーファイルで変更可能

2010/12/6
保存領域オフセットを150kbずらした(他のプラグイン 150KB以内なら共用可能？)

2010/12/3
サーチをスクラッチ領域に変更、サーチ保存件数1500まで拡大
チート編集でもLRで27行分とばせるようにした
fix null string,big database
use search terampory,0x10004 scrachzone
L/R skip +-27line cheatedit

2010/12/2
NPR旧CWCモードの32bit書き込みを復元なしに変更
コピーメニューのフラグをNPR/CWC([])に変更
サーチ結果を499件まで拡大
L/Rで20件分結果を飛ばせるようにした
コードの保存をメモリに変更したため早くなった
changed old NPR of CWC32bitWrite,need nobackup code for joker
copy menu,CWC cheat;32bit write nobackup&restore
display searchresult 499
L/R skip +-20 searchReesult
speedup cheatsave

2010/11/31
ヒカクサーチと数値サーチの速度向上
とりあえず500件まで
speedup search speed,result up to 500

2010/11/29
カラーファイルの閉じ忘れを修正,ファイルの上限を撤廃
colorfixed
