@@ -1,5 +1,5 @@
-TARGET = MKIJIRO_SC
-OBJS = objects/crt0_prx.o objects/exports.o objects/module.o objects/pspdebugkb.o objects/snprintf.o objects/usb.o objects/psid.o objects/blit.o 
+TARGET = MKIJIROHEN620
+OBJS = objects/crt0_prx.o objects/exports.o objects/module.o objects/pspdebugkb.o objects/snprintf.o objects/usb.o objects/psid.o objects/blit.o
 #objects/server.o
 
 # Define to build this as a prx (instead of a static elf)
@@ -16,8 +16,11 @@ INCDIR =
 # CFLAGS = -O2 -G0 -w -msingle-float -g -D_POPSMODE_
 
 # umd build flags
-CFLAGS = -O2 -G0 -w -msingle-float -g -D_USB_ -D_PSID_ -D_UMDMODE_ -D_JOKER_ -D_SCREENSHOT_ -D_FONT_misaki_hira -D_HBIJIRO_ -D_CFW_
+CFLAGS = -O2 -G0 -w -msingle-float -g -D_UMDMODE_ -D_JOKER_ -D_PSID_ -D_FONT_misaki_hira -D_HBIJIRO_ -D_HEN_
 
+#-D_CWCHASH_
+#-D_HBIJIRO_
+#-D_FONT_misaki_hira
 #-D_FONT_debug
 #-D_FONT_acorn //MKULTRA Defalut font
 #-D_SERVER_ //unfinished socket mode for pc debugging
@@ -39,7 +42,8 @@ LIBDIR =
 # LIBS = -lpspchnnlsv -lpsputility -lpspdebug -lpspge_driver -lpspwlan
 
 # umd
-LIBS =  -lpspchnnlsv -lpsputility -lpspdebug -lpspge_driver -lpspwlan -lpsppower -lpspumd -lpspusb -lpspusbstor
+LIBS =  -lpspchnnlsv -lpsputility -lpspdebug -lpspge_driver -lpspwlan -lpsppower_driver -lpspumd -lpspusb -lpspusbstor
+#-lpsppower
 #-lpspsdk -lpspnet -lpspnet_apctl -lpspnet_inet pc debugging shit leave it alone
 #look maw no nand driver!! wowies! (what a nice guy huh? yeah who gives a fuck what you think n00b stfu get b00ted)
 
